Fixed some styles on the collapsed rows. Fixed issue with wrong index used for column position.

--- a/test-project/kong-fu-table/src/app/kong-fu-table/kong-fu-table-core/kong-fu-table-core.component.css
+++ b/test-project/kong-fu-table/src/app/kong-fu-table/kong-fu-table-core/kong-fu-table-core.component.css
@@ -65,6 +65,10 @@
     padding-left: 5px;
 }
 
+.collapse-icon {
+    padding-right: 5px;
+}
+
 .kong-fu-header {
     display: inline-block;
     padding-left: 3px;
